<?xml version="1.0" encoding="utf-8"?>
<resources>
	<!-- TEXT PROPERTIES -->
    <string name="app_name">Calculadora UK</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
	<string name="displayTextView">display</string>
	<string name="numberCero">0</string>
	<string name="numberOne">1</string>
	<string name="numberTwo">2</string>
	<string name="numberThree">3</string>
	<string name="numberFour">4</string>
	<string name="numberFive">5</string>
	<string name="numberSix">6</string>
	<string name="numberSeven">7</string>
	<string name="numberEight">8</string>
	<string name="numberNine">9</string>							
	<string name="point">.</string>
	<string name="sum">+</string>
	<string name="substraction">-</string>
	<string name="multiplication">X</string>
	<string name="division">/</string>
	<string name="sqrt">Raz2</string>
	<string name="result">=</string>
	<string name="clear">C</string>
	<string name="clearNro">clr</string>
	<string name="sen">sen</string>
	<string name="cos">cos</string>
	<string name="tan">tan</string>
	<string name="divisionX">1/x</string>
	<string name="raiz3">Raz3</string>
	<string name="raizX">RazX</string>
	<string name="log">log</string>
	<string name="log10">lg10</string>
	<string name="diezX">10^x</string>
	<string name="cuadrado">x^2</string>
	<string name="expY">x^y</string>
	<string name="borrar">Borrar</string>
	
	<!-- Onclick Properties -->
    <string name="displayNumber">displayNumberAction</string>
    <string name="clearAction">clearAction</string>
    <string name="operationAction">operationAction</string>
    <string name="operationLandAction">operationLandAction</string>
    <string name="operationRaizAction">operationRaizAction</string>
    <string name="resultAction">resultAction</string>
    <string name="specialOperations">specialOperations</string>
    <string name="operationSenoAction">operationSenoAction</string>
    
    <string name="operationDivXAction">operationDivXAction</string>
    <string name="operationCosenoAction">operationCosenoAction</string>
    <string name="operationRaiz3Action">operationRaiz3Action</string>
    <string name="operationCuadradoAction">operationCuadradoAction</string>
    <string name="operationTangAction">operationTangAction</string>
    <string name="operationLogAction">operationLogAction</string>
    <string name="operationDiezXAction">operationDiezXAction</string>
    <string name="operationLogDiezAction">operationLogDiezAction</string>
    <string name="operationBorrarAction">operationBorrarAction</string>
</resources>
