<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.prueba.primerproyecto.PrimerActivity" >

    <LinearLayout
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:orientation="vertical">
		<!-- Fila Display -->
	    <LinearLayout
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:orientation="horizontal" >

				<TextView
				    android:id="@string/displayTextView"
				    android:layout_width="254dp"
				    android:layout_height="wrap_content"
				    android:text="@string/numberCero"
				    android:textSize="60sp" />

	    </LinearLayout>
    
	    <!-- MAIN LAYOUT -->
	    <LinearLayout android:layout_width="wrap_content"
			    android:layout_height="wrap_content"
			    android:orientation="horizontal" >
	
			<!-- Columna de Numeros -->
		    <LinearLayout
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:gravity="center|center_horizontal|center_vertical"
		        android:orientation="vertical" 
		        >
				<!-- Fila 7,8,9 -->
		        <LinearLayout
				    android:layout_width="wrap_content"
				    android:layout_height="wrap_content"
				    android:orientation="horizontal" >
				    <Button
				        android:layout_width="wrap_content"
				        android:layout_height="wrap_content"
				        android:text="@string/numberSeven"
	   			        android:onClick="@string/displayNumber"/>
				    <Button
				        android:layout_width="wrap_content"
				        android:layout_height="wrap_content"
				        android:text="@string/numberEight" 
	   			        android:onClick="@string/displayNumber"/>
				    <Button
				        android:layout_width="wrap_content"
				        android:layout_height="wrap_content"
				        android:text="@string/numberNine"
				        android:onClick="@string/displayNumber"/>
				</LinearLayout>
				<!-- Fila 4,5,6 -->
				<LinearLayout
				    android:layout_width="wrap_content"
				    android:layout_height="wrap_content"
				    android:orientation="horizontal" >
				    <Button
				        android:layout_width="wrap_content"
				        android:layout_height="wrap_content"
				        android:text="@string/numberFour"
	   			        android:onClick="@string/displayNumber" />
				    <Button
				        android:layout_width="wrap_content"
				        android:layout_height="wrap_content"
				        android:text="@string/numberFive" 
	   			        android:onClick="@string/displayNumber"/>
				    <Button
				        android:layout_width="wrap_content"
				        android:layout_height="wrap_content"
				        android:text="@string/numberSix"
	   			        android:onClick="@string/displayNumber"/>    
				</LinearLayout>
				<!-- Fila 1,2,3 -->
				<LinearLayout
				    android:layout_width="wrap_content"
				    android:layout_height="wrap_content"
				    android:orientation="horizontal" >
				    <Button
				        android:layout_width="wrap_content"
				        android:layout_height="wrap_content"
				        android:text="@string/numberOne"
						android:onClick="@string/displayNumber" />
				    <Button
				        android:layout_width="wrap_content"
				        android:layout_height="wrap_content"
				        android:text="@string/numberTwo"
				        android:onClick="@string/displayNumber"/>
				    <Button
				        android:layout_width="wrap_content"
				        android:layout_height="wrap_content"
				        android:text="@string/numberThree"
				        android:onClick="@string/displayNumber"/>
				</LinearLayout>
				<!-- Fila C,0,. -->
				<LinearLayout
				    android:layout_width="wrap_content"
				    android:layout_height="wrap_content"
				    android:orientation="horizontal" >
				    <Button
				        android:layout_width="wrap_content"
				        android:layout_height="wrap_content"
				        android:text="@string/clear" 
				        android:onClick="@string/clearAction"/>	
				    <Button
				        android:layout_width="wrap_content"
				        android:layout_height="wrap_content"
				        android:text="@string/numberCero" 
	   			        android:onClick="@string/displayNumber"/>
				    <Button
				        android:layout_width="wrap_content"
				        android:layout_height="wrap_content"
				        android:text="@string/point"
	   			        android:onClick="@string/displayNumber"/>		    
				</LinearLayout>
				<!-- Fila = -->
				<LinearLayout
				    android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:orientation="horizontal" >
				    <Button
				        android:layout_width="match_parent"
				        android:layout_height="wrap_content"
				        android:text="@string/result"
				        android:onClick="@string/resultAction"/>
				</LinearLayout>
			</LinearLayout>
			<!-- Columna Operaciones -->
			<LinearLayout android:orientation="vertical"
			     android:layout_width="wrap_content"
			     android:layout_height="wrap_content">
				<!-- Fila + -->
				<LinearLayout android:layout_width="wrap_content"
				    android:layout_height="wrap_content"
				    android:orientation="horizontal" >
				    <Button android:id="@string/sum"
				        android:layout_width="wrap_content"
				        android:layout_height="wrap_content"
				        android:text="@string/sum"
				        android:onClick="@string/operationAction" />
				</LinearLayout>
				<!-- Fila - -->
				<LinearLayout android:layout_width="wrap_content"
				    android:layout_height="wrap_content"
				    android:orientation="horizontal" >
				    <Button android:id="@string/substraction"
				        android:layout_width="wrap_content"
				        android:layout_height="wrap_content"
				        android:text="@string/substraction"
				        android:onClick="@string/operationAction"/>
				</LinearLayout>
				<!-- Fila X -->
				<LinearLayout android:layout_width="wrap_content"
				    android:layout_height="wrap_content"
				    android:orientation="horizontal" >
				    <Button android:id="@string/multiplication"
				        android:layout_width="wrap_content"
				        android:layout_height="wrap_content"
				        android:text="@string/multiplication"
				        android:onClick="@string/operationAction" />
				</LinearLayout>	    
				<!-- Fila / -->
				<LinearLayout android:layout_width="wrap_content"
				    android:layout_height="wrap_content"
				    android:orientation="horizontal" >
				    <Button android:id="@string/division"
				        android:layout_width="wrap_content"
				        android:layout_height="wrap_content"
				        android:text="@string/division"
				        android:onClick="@string/operationAction" />
				</LinearLayout>
				<!-- Fila ¬ -->
				<LinearLayout android:layout_width="wrap_content"
				    android:layout_height="wrap_content"
				    android:orientation="horizontal" >
				    <Button android:id="@string/sqrt"
				        android:layout_width="wrap_content"
				        android:layout_height="wrap_content"
				        android:text="@string/sqrt"
				        android:onClick="@string/operationRaizAction" />
				</LinearLayout>	    
			</LinearLayout>
		</LinearLayout>
	</LinearLayout>
</RelativeLayout>
